--- a/robotrace_v1/.vscode/settings.json
+++ b/robotrace_v1/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
         "*.h": "c"
-    }
+    },
+    "C_Cpp.default.includePath": [
+        "${workspaceFolder}/**"
+    ]
 }
